--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 	<meta charset="cp-1251">
 <head>
 <body>
- <h1>Вот это событие!</h1>
+ <button type="button" id="subscribe">Следить за изменениями</button>
+ 
+ <script src = "https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> 
+ <script src = "script.js"></script>
 <body>
 </html>
